# buds

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Cargo.toml  README.md  co.tauos.Buds.Devel.json  co.tauos.Buds.json  com.fyralabs.Buds.Devel.json  com.fyralabs.Buds.json  meson.build  meson_options.txt
,github/workflows/: ci.yml  deploy.yml
.github/workflows/: ci.yml  deploy.yml
build-aux/: co.tauos.Buds.Devel.json
data/: co.tauos.Buds.appdata.xml.in  co.tauos.Buds.desktop.in  co.tauos.Buds.desktop.in.in  co.tauos.Buds.metainfo.xml.in.in  com.fyralabs.Buds.appdata.xml.in  com.fyralabs.Buds.desktop.in  com.fyralabs.Buds.gschema.xml  meson.build  resources.gresource.xml  style.css
data/icons/: meson.build
data/resources/: resources.gresource.xml
data/resources/ui/: window.ui
data/ui/: preferences.blp  window.blp  window.ui
flatpak/: intltool-perl5.26-regex-fixes.patch
po/: POTFILES  POTFILES.in
src/: application.rs  application.vala  macros.rs  main.rs  meson.build  preferences_dialog.vala  window.rs  window.vala
src/core/: store.vala  utils.vala
src/widgets/: contact_row.vala
