icondir = join_paths(get_option('datadir'), 'icons/hicolor')

install_data(
  '@0@.svg'.format(app_id),
  install_dir: icondir / 'scalable' / 'apps'
)

install_data(
  '@0@.svg'.format(app_id),
  install_dir: icondir / 'scalable' / 'apps' / '@0@.Devel.svg'.format(app_id)
)

install_data(
  'com.fyralabs.Buds-symbolic.svg',
  install_dir: icondir / 'symbolic' / 'apps'
)
